[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "collect"
version = "1.3.0"
description = "Collectible items for your BallsDex clone! Must have currency enabled."
license = "MIT"
authors = [
    { name = "crashtestalex" },
]
readme = "README.md"
dependencies = [
    "asgiref>=3.8.1",
]

[project.urls]
Repository = "https://github.com/S0LAR-dev/collectibles-ballsdex"
Documentation = "https://github.com/S0LAR-dev/collectibles-ballsdex#readme"
Issues = "https://github.com/S0LAR-dev/collectibles-ballsdex/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["collect*"]
